@@ -1,3 +1,7 @@
+Sat Sep 12 20:09:24 1998  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
+
+	* windows.h: Remove error number definitions. These are in <errno.h>
+
 1998-09-12  Ben Elliston  <bje@cygnus.com>
 
 	* {most}.c: Include <errno.h> to get POSIX error values.
